Remove preview flag.